@@ -1,5 +1,6 @@
 v1.0.8
 - Add additional beach, matrix, sci-fi, space and woodland screensavers
+- Add special check to see if TvTunes is still running
 
 v1.0.7
 - Move screensaver videos to different host
